test/tests/stages/16_characters_and_strings/invalid_types/char_and_schar_conflict.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: c
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        Char: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: c
                  None: 
                  SChar: 
                  CExtern: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: c
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
